feat: add fixture generation/cleanup tools, update encoding config, and implement help command for fixtures